--- a/Hippo/FuguUnique.storyboard
+++ b/Hippo/FuguUnique.storyboard
@@ -1403,7 +1403,7 @@
                                         </subviews>
                                     </stackView>
                                 </subviews>
-                                <color key="backgroundColor" red="0.98431372549999996" green="0.90588235289999997" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" red="0.98029941320000002" green="0.90282821660000001" blue="0.55601763729999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="bun-mH-ri9" firstAttribute="centerY" secondItem="Uir-cP-cEo" secondAttribute="centerY" id="NQc-60-cga"/>
                                     <constraint firstAttribute="height" constant="25" id="XQo-J3-tzt"/>
@@ -1486,6 +1486,52 @@
                                     </view>
                                 </subviews>
                             </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8yy-SI-Fsj">
+                                <rect key="frame" x="57" y="298" width="300" height="300"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Want to keep talking? Simply recharge your wallet to enjoy uninterrupted calls anytime you need." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MNJ-8B-8MK">
+                                        <rect key="frame" x="30" y="94" width="240" height="106"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="00K-2H-ptB">
+                                        <rect key="frame" x="112.5" y="230" width="75" height="40"/>
+                                        <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="75" id="1MY-6A-qxN"/>
+                                            <constraint firstAttribute="height" constant="40" id="jwC-id-OhE"/>
+                                        </constraints>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Ok!">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="wallectOkPressed:" destination="sYd-aP-0RS" eventType="touchUpInside" id="xfb-OD-Dij"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enjoy a complimentary 5-minute call on us! Your free call is ready to use – connect now." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a8O-J3-vZl">
+                                        <rect key="frame" x="30" y="20" width="240" height="54"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.98431372549999996" green="0.90588235289999997" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstItem="a8O-J3-vZl" firstAttribute="leading" secondItem="8yy-SI-Fsj" secondAttribute="leading" constant="30" id="1Og-eT-qAD"/>
+                                    <constraint firstAttribute="trailing" secondItem="a8O-J3-vZl" secondAttribute="trailing" constant="30" id="4tN-PA-ks5"/>
+                                    <constraint firstAttribute="width" constant="300" id="7L7-Hb-XuJ"/>
+                                    <constraint firstAttribute="trailing" secondItem="MNJ-8B-8MK" secondAttribute="trailing" constant="30" id="8DB-9p-XLx"/>
+                                    <constraint firstItem="MNJ-8B-8MK" firstAttribute="leading" secondItem="8yy-SI-Fsj" secondAttribute="leading" constant="30" id="NIa-Xt-zd7"/>
+                                    <constraint firstAttribute="bottom" secondItem="00K-2H-ptB" secondAttribute="bottom" constant="30" id="OEh-qb-EF6"/>
+                                    <constraint firstItem="00K-2H-ptB" firstAttribute="centerX" secondItem="8yy-SI-Fsj" secondAttribute="centerX" id="aEm-9o-65U"/>
+                                    <constraint firstItem="MNJ-8B-8MK" firstAttribute="top" secondItem="a8O-J3-vZl" secondAttribute="bottom" constant="20" id="dIf-dF-evI"/>
+                                    <constraint firstAttribute="height" constant="300" id="gIt-em-b0J"/>
+                                    <constraint firstItem="a8O-J3-vZl" firstAttribute="top" secondItem="8yy-SI-Fsj" secondAttribute="top" constant="20" id="lC2-gy-NIJ"/>
+                                    <constraint firstItem="00K-2H-ptB" firstAttribute="top" secondItem="MNJ-8B-8MK" secondAttribute="bottom" constant="30" id="uZI-Gj-VBb"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.97647058819999999" green="0.98823529409999999" blue="0.98823529409999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -1494,6 +1540,7 @@
                             <constraint firstAttribute="trailing" secondItem="7N2-B4-4Ya" secondAttribute="trailing" id="4I1-0q-LsL"/>
                             <constraint firstItem="HOO-xV-gYe" firstAttribute="leading" secondItem="S9M-dE-hY2" secondAttribute="leading" id="5Sd-Dn-aKb"/>
                             <constraint firstItem="WCe-q2-yvR" firstAttribute="top" secondItem="wqZ-OS-hnt" secondAttribute="bottom" id="73C-1i-Ke9"/>
+                            <constraint firstItem="8yy-SI-Fsj" firstAttribute="centerX" secondItem="S9M-dE-hY2" secondAttribute="centerX" id="8AV-dN-6ie"/>
                             <constraint firstItem="Uir-cP-cEo" firstAttribute="leading" secondItem="S9M-dE-hY2" secondAttribute="leading" id="8SN-X6-gfB"/>
                             <constraint firstAttribute="trailing" secondItem="HOO-xV-gYe" secondAttribute="trailing" id="9fT-Fu-e4Z"/>
                             <constraint firstAttribute="trailing" secondItem="Uir-cP-cEo" secondAttribute="trailing" id="AFD-Sf-d0h"/>
@@ -1506,6 +1553,7 @@
                             <constraint firstAttribute="trailing" secondItem="wqZ-OS-hnt" secondAttribute="trailing" id="SNL-Sz-zAO"/>
                             <constraint firstAttribute="trailing" secondItem="d1M-i4-bXK" secondAttribute="trailing" id="SWP-Ax-1kc"/>
                             <constraint firstItem="cvX-d1-Pra" firstAttribute="top" secondItem="qaz-sc-1L7" secondAttribute="bottom" id="TKX-fM-kEc"/>
+                            <constraint firstItem="8yy-SI-Fsj" firstAttribute="centerY" secondItem="S9M-dE-hY2" secondAttribute="centerY" id="YqI-f7-UT7"/>
                             <constraint firstItem="Fld-6h-IW2" firstAttribute="centerX" secondItem="S9M-dE-hY2" secondAttribute="centerX" id="ZfD-u8-cim"/>
                             <constraint firstItem="d1M-i4-bXK" firstAttribute="top" secondItem="WCe-q2-yvR" secondAttribute="bottom" id="aXv-W0-c02"/>
                             <constraint firstItem="7N2-B4-4Ya" firstAttribute="leading" secondItem="S9M-dE-hY2" secondAttribute="leading" id="cF8-fU-Lt6"/>
@@ -1544,6 +1592,7 @@
                         <outlet property="collectionViewOptions" destination="vQA-3A-IYd" id="0Ei-KX-9L2"/>
                         <outlet property="errorContentView" destination="cvX-d1-Pra" id="bxU-YD-M2T"/>
                         <outlet property="errorLabel" destination="pyU-lu-mcX" id="Q1R-At-yu6"/>
+                        <outlet property="firstLineLbl" destination="a8O-J3-vZl" id="Nlq-bw-ayr"/>
                         <outlet property="height_errorView" destination="3dg-dn-6hz" id="dGP-Hc-Vlq"/>
                         <outlet property="labelViewRetryButton" destination="yTc-4O-JxL" id="NtK-Bz-wyh"/>
                         <outlet property="label_slowInternet" destination="wUb-Ah-pXI" id="NSe-Sy-ErB"/>
@@ -1555,12 +1604,14 @@
                         <outlet property="newConversationCountButton" destination="JHU-fX-wP9" id="7V0-Mo-SUb"/>
                         <outlet property="newConversationLabel" destination="hbE-JQ-d7g" id="Jok-B8-6aY"/>
                         <outlet property="newConversationShadow" destination="rzh-UV-rWK" id="egw-ie-5mQ"/>
+                        <outlet property="okBtn" destination="00K-2H-ptB" id="XQf-ZU-8Kq"/>
                         <outlet property="placeHolderLabel" destination="FQc-qg-FUN" id="ik7-HR-MeY"/>
                         <outlet property="pleaseSelectOptionLabel" destination="Udh-na-oyy" id="wOQ-0E-FQd"/>
                         <outlet property="pleaseSelectOptionView" destination="d1M-i4-bXK" id="cvP-Mz-1yi"/>
                         <outlet property="retryLabelView" destination="Uir-cP-cEo" id="9Ny-1f-JhC"/>
                         <outlet property="retryLabelViewHeight" destination="XQo-J3-tzt" id="hgz-Ue-DJO"/>
                         <outlet property="retryLoader" destination="deC-Oh-OPD" id="Kgz-KA-JXo"/>
+                        <outlet property="secondLineLbl" destination="MNJ-8B-8MK" id="Sz9-9K-9BK"/>
                         <outlet property="sendMessageButton" destination="ClS-Vk-bw0" id="SJ1-4B-Qu1"/>
                         <outlet property="seperatorView" destination="7N2-B4-4Ya" id="2Ti-gO-tRo"/>
                         <outlet property="stackViewButton" destination="Nvq-jc-yaa" id="6bu-AO-W8D"/>
@@ -1570,6 +1621,7 @@
                         <outlet property="textViewBottomConstraint" destination="xs9-J1-xKA" id="DrI-gf-cD4"/>
                         <outlet property="viewRecord" destination="JIA-bQ-6Q1" id="RgZ-yb-gOi"/>
                         <outlet property="view_Navigation" destination="qaz-sc-1L7" id="hV4-DL-K35"/>
+                        <outlet property="walletBgView" destination="8yy-SI-Fsj" id="tED-ko-4MK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PpZ-wt-1uB" sceneMemberID="firstResponder"/>
@@ -2869,7 +2921,7 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
