--- a/Hippo/FuguUnique.storyboard
+++ b/Hippo/FuguUnique.storyboard
@@ -34,7 +34,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O8k-OG-ooO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1202" y="-1119"/>
+            <point key="canvasLocation" x="-292.75362318840581" y="-1119.6428571428571"/>
         </scene>
         <!--Notifications-->
         <scene sceneID="W3G-nR-Goi">
@@ -42,7 +42,6 @@
                 <navigationController storyboardIdentifier="FuguPromotionalNavigationController" id="uxO-Mf-Abt" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Notifications" image="notification" selectedImage="notification" id="EBS-Kg-a8d"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="e1E-4N-jsG">
-                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </navigationBar>
@@ -52,7 +51,52 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ck9-gV-vR6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2514" y="18"/>
+            <point key="canvasLocation" x="-3038" y="19"/>
+        </scene>
+        <!--New All Conversation View Controller-->
+        <scene sceneID="pRc-9P-fel">
+            <objects>
+                <viewController storyboardIdentifier="NewAllConversationViewController" id="WFP-lN-Doi" customClass="NewAllConversationViewController" customModule="Hippo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="1Gv-Eh-LD0"/>
+                        <viewControllerLayoutGuide type="bottom" id="wgv-Sg-Ggp"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="6au-By-g7Z">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rLz-2z-iCv">
+                                <rect key="frame" x="0.0" y="54" width="414" height="61"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="vW6-81-gr1"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="bub-cU-h10">
+                                <rect key="frame" x="0.0" y="115" width="414" height="773"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="bub-cU-h10" firstAttribute="top" secondItem="rLz-2z-iCv" secondAttribute="bottom" id="2zX-Ws-B6L"/>
+                            <constraint firstItem="bub-cU-h10" firstAttribute="leading" secondItem="6au-By-g7Z" secondAttribute="leading" id="4ew-dz-yj0"/>
+                            <constraint firstItem="rLz-2z-iCv" firstAttribute="leading" secondItem="6au-By-g7Z" secondAttribute="leading" id="8b9-4c-8qU"/>
+                            <constraint firstAttribute="trailing" secondItem="rLz-2z-iCv" secondAttribute="trailing" id="EDl-JT-9yW"/>
+                            <constraint firstItem="rLz-2z-iCv" firstAttribute="top" secondItem="1Gv-Eh-LD0" secondAttribute="bottom" constant="20" id="IzX-E4-5RB"/>
+                            <constraint firstAttribute="trailing" secondItem="bub-cU-h10" secondAttribute="trailing" id="Q9s-hz-kOA"/>
+                            <constraint firstItem="wgv-Sg-Ggp" firstAttribute="top" secondItem="bub-cU-h10" secondAttribute="bottom" id="oJi-Q5-rr4"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="NHv-9F-iSV"/>
+                    <connections>
+                        <outlet property="navBar" destination="rLz-2z-iCv" id="NGT-lD-vwi"/>
+                        <outlet property="tableView" destination="bub-cU-h10" id="rDp-cJ-3Rp"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fvh-6y-0RR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1857.9710144927537" y="-1119.6428571428571"/>
         </scene>
         <!--Chats-->
         <scene sceneID="EwH-an-rCy">
@@ -869,7 +913,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QSl-hV-iBC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1961" y="-1119"/>
+            <point key="canvasLocation" x="-1052.1739130434783" y="-1119.6428571428571"/>
         </scene>
         <!--Show Image View Controller-->
         <scene sceneID="BZu-Tn-1PS">
@@ -1427,8 +1471,10 @@
                                                 </collectionViewFlowLayout>
                                                 <cells>
                                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="AttachmentOptionCollectionViewCell" reuseIdentifier="AttachmentOptionCollectionViewCell" id="Wh8-44-4eZ" customClass="AttachmentOptionCollectionViewCell" customModule="Hippo" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" id="uXo-6S-Bf5">
+                                                            <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <subviews>
                                                                 <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="a8f-hg-gsK">
@@ -1718,7 +1764,6 @@
             <objects>
                 <navigationController id="RpE-1N-YN1" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="y4n-Z4-NbO">
-                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                 </navigationController>
@@ -1915,7 +1960,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rAZ-zl-4EK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-266" y="-1119"/>
+            <point key="canvasLocation" x="643.47826086956525" y="-1119.6428571428571"/>
         </scene>
         <!--List Description View Controller-->
         <scene sceneID="wwx-Y1-uDg">
@@ -2179,14 +2224,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ftV-ge-Pvs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="444" y="-1119"/>
+            <point key="canvasLocation" x="1353.6231884057972" y="-1119.6428571428571"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="cZK-eT-AMT">
             <objects>
                 <navigationController id="VeR-0t-2Rq" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="x3o-cy-0V3">
-                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.24086651210000001" green="0.27939924599999999" blue="0.94049584870000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
@@ -2355,7 +2399,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jG4-ar-HKK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1772" y="18"/>
+            <point key="canvasLocation" x="-2300" y="17"/>
         </scene>
         <!--Pre Payment Controller-->
         <scene sceneID="2e2-Kk-xMu">
@@ -2826,7 +2870,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bDL-KK-QS0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2163.768115942029" y="-624.10714285714278"/>
+            <point key="canvasLocation" x="3073.913043478261" y="-624.10714285714278"/>
         </scene>
         <!--Whats App View Controller-->
         <scene sceneID="YTl-FL-FxA">
@@ -2878,7 +2922,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="glE-y4-rot" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-657" y="-477"/>
+            <point key="canvasLocation" x="110" y="-1962"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="GqL-Wj-2UH">
@@ -2886,7 +2930,6 @@
                 <navigationController storyboardIdentifier="FuguTicketsNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="pU8-iO-2Xm" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="LgI-Qp-6W8">
-                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -2896,7 +2939,24 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="52e-F1-Tzr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1253.6231884057972" y="-624.10714285714278"/>
+            <point key="canvasLocation" x="2163.768115942029" y="-624.10714285714278"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="qZB-dW-ZGF">
+            <objects>
+                <navigationController storyboardIdentifier="NewFuguCustomerNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="L49-nF-6gu" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="U7P-kd-Eon">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="WFP-lN-Doi" kind="relationship" relationship="rootViewController" id="PiQ-u6-4VA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ljq-Uu-bAf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2768.1159420289855" y="-1119.6428571428571"/>
         </scene>
     </scenes>
     <resources>
@@ -2906,10 +2966,10 @@
         <image name="cancel_icon" width="16" height="16"/>
         <image name="chat" width="20" height="21"/>
         <image name="close_conversation_icon" width="32" height="32"/>
-        <image name="crop" catalog="system" width="128" height="116"/>
+        <image name="crop" catalog="system" width="32" height="32"/>
         <image name="download_white" width="21" height="21"/>
         <image name="makePayment" width="45" height="45"/>
-        <image name="mic" catalog="system" width="110" height="128"/>
+        <image name="mic" catalog="system" width="32" height="32"/>
         <image name="moreOptions" width="24" height="24"/>
         <image name="newChat" width="30" height="30"/>
         <image name="new_chat_icon" width="18" height="19"/>
